[package]
name = "raytracing-weekend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#image = "0.23.14"
assert_approx_eq = "1.1.0"
rand = "0.8.5" 
rayon = "1.7.0"
env_logger = "0.10"
log = "0.4"
pixels = "0.9.0"
winit = "0.26"
winit_input_helper = "0.14"